maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:30: error: expected class or object definition
def ecritIndications() {
^JediEscaper:39: error: expected start of definition
override def run() {
         ^JediEscaper:46: error: expected class or object definition
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
        ^JediEscaper:47: error: expected class or object definition
	def aMurNord(x:Int, y:Int):Boolean = hasTopWall(x,y)
        ^JediEscaper:48: error: expected class or object definition
	def aMurOuest(x:Int, y:Int):Boolean = hasLeftWall(x, y)
        ^JediEscaper:49: error: Unmatched closing brace '}' ignored here
}
^